--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="result">Você precisará de: </string>
     <string name="height">Altura</string>
     <string name="width">Largura</string>
+    <string name="totalArea">Área total m²: </string>
 </resources>
